Add a non-www route because wrangler-dev was giving me troubles

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,7 @@ type = "javascript"
 
 account_id = ""
 workers_dev = true
-route = "www.routenotfound.com/api/*"
+routes = ["www.routenotfound.com/api/*", "routenotfound.com/api/*"]
 zone_id = "cb2e7aac346593483a4e3a8543cb6855"
 
 # Secrets
